--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
